--- a/list_mat_perm.qmd
+++ b/list_mat_perm.qmd
@@ -4,15 +4,25 @@ number-sections: true
 lang: pt-BR
 ---
 
+Nesta página, vamos ver como trabalhar com listas, matrizes e permutações em `GAP`.
+
 ## Listas {#sec-list}
 
-Listas são importantes em ```GAP```. Listas contém uma sequência de objetos. Os objetos nas listas podem ser números, carateres, ou até objetos complexos, tais como grupos, subgrupos de um grupo, etc. Os seguintes exemplos mostram a criação de listas e as operações básicas com listas.
+:::{.subexample}
+Listas são importantes em `GAP` ([manual](https://docs.gap-system.org/doc/ref/chap21.html)). Listas contém uma sequência de objetos. Os objetos nas listas podem ser números, carateres, ou até objetos complexos, tais como grupos, subgrupos de um grupo, etc. Os seguintes exemplos mostram a criação de listas e as operações básicas com listas.
 
 ```matlab
+gap> L := [1..10]
+[ 1 .. 10 ]
 gap> L1 := [1,3,5,7,9,10,8,6,4,2,0];
 [ 1, 3, 5, 7, 9, 10, 8, 6, 4, 2, 0 ]
 gap> L2 := ["a","b","c","z","x","y"];
 [ "a", "b", "c", "z", "x", "y" ]
+```
+
+Para acessar os elementos de uma lista, usamos `list[n]` que devolve o $n$-ésimo elemento começando por `list[1]`. Para verificar se um objeto pertence ou não a uma lista, pode usar o operador `in`.
+
+```matlab
 gap> L1[3];
 5
 gap> 10 in L1;
@@ -21,44 +31,72 @@ gap> 10 in L2;
 false
 gap> "a" in L2;
 true
-gap> Union( L1, L2 );
-[ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, "a", "b", "c", "x", "y", "z" ]
+```
+
+A posição de um elemento em uma lista pode ser determinada usando a função `Position`.
+
+```matlab
 gap> Position( L1, 10 );
 6
 gap> Position( L1, -1 );
 fail
-gap> Intersection( L1, L2 );
-[  ]
-gap> Filtered( L, x -> x mod 2 = 0 );
-Error, Variable: 'L' must have a value
-not in any function at *stdin*:2
-gap> Filtered( L1, x -> x mod 2 = 0 );
-[ 10, 8, 6, 4, 2, 0 ]
-gap> Filtered( L1, x -> x mod 2 = 1 );
-[ 1, 3, 5, 7, 9 ]
-gap> Filtered( L1, x -> IsEvenInt( x ));
-[ 10, 8, 6, 4, 2, 0 ]
-gap> Filtered( L1, x -> IsOddInt( x ));
-[ 1, 3, 5, 7, 9 ]
+```
+
+Frequentamente, precisa-se criar novas listas usando listas. Por exemplo, frequentamente queremos criar a lista de elementos de uma outra lista que satisfazem uma certa propriedade. Esta tarefa pode ser resolvida usando a função `Filtered( list, func )` em `GAP` onde `list` é uma lista e `func` é uma função (@sec-functions). Nos seguintes exemplos veremos alguns usos simples desta construção.
+
+```matlab 
 gap> Filtered( L1, IsEvenInt );
 [ 10, 8, 6, 4, 2, 0 ]
 gap> Filtered( L1, IsOddInt );
 [ 1, 3, 5, 7, 9 ]
-gap> 
+gap> Filtered( L1, x -> x mod 2 = 0 );
+[ 10, 8, 6, 4, 2, 0 ]
+gap> Filtered( L1, x -> x mod 2 = 1 );
+[ 1, 3, 5, 7, 9 ]
 ```
 
-Listas podem ser criadas usando outras listas. Por exemplo, criamos a list dos quadrados dos primeiros 10 números naturais:
+Novas listas podem ser criadas também aplicando uma função nos elementos de uma outra lista. Por exemplo, criamos a lista dos quadrados dos primeiros 10 números naturais:
 ```matlab
 gap> List( [1..10], x->x^2 );
 [ 1, 4, 9, 16, 25, 36, 49, 64, 81, 100 ]
 ```
+
+`GAP` trabalha também com listas nas quais algumas entradas não estão definidas. Considere por exemplo as seguintes instruções.
+```matlab
+gap> l := [1,2,,,12];
+[ 1, 2,,, 12 ]
+gap> l[1];
+1
+gap> l[2];
+2
+gap> l[3];
+Error, List Element: <list>[3] must have an assigned value
+not in any function at *stdin*:166
+type 'quit;' to quit to outer loop
+brk> quit;
+gap> IsBound( l[3] );
+false
+gap> IsBound( l[4] );
+false
+gap> IsBound( l[5] );
+true
+gap> l[5];
+12
+gap> 
+gap> l[8] := 22;
+22
+gap> l;
+[ 1, 2,,, 12,,, 22 ]
+```
+Note que, ao acessar `l[3]`, obtemos um erro, pois esta entrada não existe. Para evitar este erro, podemos verificar se existe ou não a entrada usando `IsBound`.
+:::
 
 ## Matrizes {#sec-matrix}
 
-Em `GAP` uma matriz é lista de listas (que são as linhas da matriz). As entradas de matrizes são tipicamente números ou, mais geralmente, elementos de um anel ou corpo. As matrizes podem ser somadas e multiplicadas exatamente como números.
+
+:::{.subexample}
+Em `GAP` uma matriz é lista de listas (que são as linhas da matriz) ([manual](https://docs.gap-system.org/doc/ref/chap24.html)). As entradas de matrizes são tipicamente números ou, mais geralmente, elementos de um anel ou corpo. As matrizes podem ser somadas e multiplicadas exatamente como números.
 ```matlab
-gap> List( [1..10], x->x^2 );
-[ 1, 4, 9, 16, 25, 36, 49, 64, 81, 100 ]
 gap> m1 := [[1,2,0],[0,-2,3]];
 [ [ 1, 2, 0 ], [ 0, -2, 3 ] ]
 gap> Display( m1 );
@@ -82,9 +120,12 @@ gap> Display( last );
   [    0,   -6,    9 ],
   [    4,    7,  3/2 ] ]
 ```
+:::
 
 ## Permutações {#sec-permutation}
 
+
+:::{.subexample}
 Outro objeto fundamento quando trabalhamos com grupos finitos é a permutação. Permutações em `GAP` podem ser definidas como produto de cíclos disjuntos mas também usando uma lista. 
 ```matlab
 gap> p1 := (1,2,3)(4,5,6);
@@ -98,4 +139,4 @@ gap> p1*p2;
 gap> p2*p1;
 (1,2,6,4)(3,5)
 ```
-
+:::
